--- a/index.html
+++ b/index.html
@@ -43,11 +43,9 @@
   <section id="sobre" class="sobre">
     <div class="container">
       <h2>Quem somos</h2>
-      <p>Com mais de 25 anos de experiência no setor, a <strong>Tecnomac Comércio de Peças e Assistência Técnica LTDA</strong> é referência em manutenção e reparos de veículos a diesel em Canelinha/SC e região.
+      <p>Com mais de 40 anos de experiência no setor, a <strong>Tecnomac Comércio de Peças e Assistência Técnica LTDA</strong> é referência em manutenção e reparos de veículos a diesel em Canelinha/SC e região. Fundada com o compromisso de oferecer um serviço técnico de excelência, a Tecnomac se destaca pelo atendimento especializado, estrutura completa e um time de profissionais capacitados e em constante atualização.
 
-Fundada com o compromisso de oferecer um serviço técnico de excelência, a Tecnomac se destaca pelo atendimento especializado, estrutura completa e um time de profissionais capacitados e em constante atualização.
-
-Ao longo de nossa trajetória, conquistamos a confiança de clientes de toda a região, graças à nossa dedicação, transparência e compromisso com a qualidade. Trabalhamos com as principais marcas do mercado e oferecemos tanto o serviço de mecânica quanto a comercialização de peças, garantindo soluções completas para caminhonetes, caminhões e utilitários movidos a diesel.
+Presente no mercado desde 1980, ao longo de nossa trajetória conquistamos a confiança de clientes de toda a região, graças à nossa dedicação, transparência e compromisso com a qualidade.</p><br><p> Trabalhamos com as principais marcas do mercado e oferecemos tanto serviços de mecânica quanto a comercialização de peças, garantindo soluções completas para caminhonetes, caminhões, ônibus e utilitários movidos a diesel.
 
 Na Tecnomac, cada cliente é atendido com atenção e respeito, sempre com foco na segurança, no desempenho e na durabilidade do seu veículo.</p>
     </div>
@@ -65,7 +63,7 @@ Na Tecnomac, cada cliente é atendido com atenção e respeito, sempre com foco 
         <div class="card">
           <img src="img/serviços/borracharia.jpg" alt="Borracharia">
           <h3>Borracharia</h3>
-          <p>Reparos e serviços rápidos para pneus, calibragem e consertos.</p>
+          <p>Reparos, trocas e concerto de pneus.</p>
         </div>
         <div class="card">
           <img src="img/serviços/bombaInjetora.jpg" alt="Bombas injetoras">
@@ -73,7 +71,7 @@ Na Tecnomac, cada cliente é atendido com atenção e respeito, sempre com foco 
           <p>Manutenção e reparo de bombas injetoras para máximo desempenho.</p>
         </div>
         <div class="card">
-          <img src="img/serviços/guincho.png" alt="Guincho">
+          <img src="img/serviços/guincho.jpg" alt="Guincho">
           <h3>Guincho</h3>
           <p>Serviço de guincho rápido e seguro para emergências.</p>
         </div>
@@ -94,9 +92,11 @@ Na Tecnomac, cada cliente é atendido com atenção e respeito, sempre com foco 
  <section id="pecas" class="servicos">
   <div class="container">
     <h2>Peças</h2>
+    <p class="frase-destaque">Não está encontrando a peça que precisa? Na Tecnomac você encontra!</p>
     <div class="grid-servicos">
+      <!-- ... (restante dos cards de peças) -->
       <div class="card">
-        <img src="img/peças/Filtro de ar e óleo.png" alt="Filtro de ar e óleo">
+        <img src="img/peças/Filtros.jpg" alt="Filtro de ar e óleo">
         <h3>Filtro de ar e óleo</h3>
         <p>Filtros de alta performance para melhor desempenho do motor.</p>
       </div>
@@ -151,7 +151,7 @@ Na Tecnomac, cada cliente é atendido com atenção e respeito, sempre com foco 
         <p>Fixação segura para mangueiras e conexões.</p>
       </div>
       <div class="card hidden">
-        <img src="img/peças/Correias_1.png" alt="Correias">
+        <img src="img/peças/Correias.png" alt="Correias">
         <h3>Correias</h3>
         <p>Correias resistentes para sistemas de transmissão e motor.</p>
       </div>
@@ -166,7 +166,7 @@ Na Tecnomac, cada cliente é atendido com atenção e respeito, sempre com foco 
         <p>Fixação confiável e vedação duradoura.</p>
       </div>
       <div class="card hidden">
-        <img src="img/peças/Grampos_1.png" alt="Grampos">
+        <img src="img/peças/Grampos.jpg" alt="Grampos">
         <h3>Grampos</h3>
         <p>Utilizados para fixação de cabos, chicotes e mangueiras.</p>
       </div>
@@ -181,7 +181,7 @@ Na Tecnomac, cada cliente é atendido com atenção e respeito, sempre com foco 
         <p>Lubrificação ideal para proteção do motor e engrenagens.</p>
       </div>
       <div class="card hidden">
-        <img src="img/peças/válvula.png" alt="Válvulas">
+        <img src="img/peças/Valvula.jpg" alt="Válvulas">
         <h3>Válvulas</h3>
         <p>Controle preciso de fluxo nos motores.</p>
       </div>
