--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <section class="hero">
     <div class="container">
-      <h2>Especialistas em manutenção automotiva</h2>
+      <h2>Especialistas em manutenção de veículos a diesel</h2>
       <p>Atendimento rápido, transparente e com garantia.</p>
       <a class="botao-cta" href="https://wa.me/554832640808" target="_blank">Agende pelo WhatsApp</a>
     </div>
@@ -42,12 +42,20 @@
 
   <section id="sobre" class="sobre">
     <div class="container">
-      <h2>Quem somos</h2>
-      <p>Com mais de 40 anos de experiência no setor, a <strong>Tecnomac Comércio de Peças e Assistência Técnica LTDA</strong> é referência em manutenção e reparos de veículos a diesel em Canelinha/SC e região. Fundada com o compromisso de oferecer um serviço técnico de excelência, a Tecnomac se destaca pelo atendimento especializado, estrutura completa e um time de profissionais capacitados e em constante atualização.
+      <h2>Quem somos?</h2>
+<p>
+  Com <strong>mais de 40 anos de experiência</strong>, a <strong>Tecnomac</strong> é referência em manutenção e reparos de veículos a diesel em Canelinha/SC e região. 
+  Fundada com o compromisso de oferecer um serviço técnico de excelência, a Tecnomac se destaca pelo atendimento especializado, estrutura completa e um time de profissionais capacitados. 
+  Presente no mercado desde 1980, conquistamos a confiança de clientes de toda a região, graças à nossa <strong>dedicação</strong> e <strong>compromisso com a qualidade</strong>.
+</p>
+<br>
+<p>
+  Trabalhamos com as <strong>principais marcas</strong> e oferecemos serviços de mecânica e comercialização de peças, garantindo <strong>soluções completas</strong> para caminhonetes, caminhões, ônibus e utilitários movidos a diesel. 
+  Na Tecnomac, cada cliente é atendido com atenção e respeito, sempre com foco na <strong>segurança</strong> e <strong>durabilidade do seu veículo</strong>.
+</p>
 
-Presente no mercado desde 1980, ao longo de nossa trajetória conquistamos a confiança de clientes de toda a região, graças à nossa dedicação, transparência e compromisso com a qualidade.</p><br><p> Trabalhamos com as principais marcas do mercado e oferecemos tanto serviços de mecânica quanto a comercialização de peças, garantindo soluções completas para caminhonetes, caminhões, ônibus e utilitários movidos a diesel.
 
-Na Tecnomac, cada cliente é atendido com atenção e respeito, sempre com foco na segurança, no desempenho e na durabilidade do seu veículo.</p>
+
     </div>
   </section>
 
@@ -168,7 +176,7 @@ Na Tecnomac, cada cliente é atendido com atenção e respeito, sempre com foco 
       <div class="card hidden">
         <img src="img/peças/Grampos.jpg" alt="Grampos">
         <h3>Grampos</h3>
-        <p>Utilizados para fixação de cabos, chicotes e mangueiras.</p>
+        <p>Grampos aplicados em molejos de veículos pesados.</p>
       </div>
       <div class="card hidden">
         <img src="img/peças/Bucha de Barra.png" alt="Bucha de Barra">
