--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tecnomac</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="./img/icone_tec.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <a href="https://wa.me/554832640808" 
@@ -15,11 +16,31 @@
 </a>
 </head>
 <body>
+  <div id="header-fixo" class="header-fixo">
+  <div class="container">
+    <a href="#topo">
+    <img src="./img/Logo Tecnomac.png" alt="Logo Tecnomac" class="logo-fixa">
+    </a>
+    <nav class="menu-fixo">
+      <a href="#sobre">Sobre</a>
+      <a href="#servicos">Serviços</a>
+      <a href="#pecas">Peças</a>
+      <a href="#localizacao">Localização</a>
+      <a href="#contato">Contato</a>
+    </nav>
+    <button class="btn-hamburguer" aria-label="Abrir menu">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
+  </div>
+</div>
   <header id="topo" class="topo">
     <div class="container">
-      <img src="./img/Logo Tecnomac.png" alt="">
-      <p>O Melhor para o seu Caminhão</p>
+      <img src="./img/Logo Tecnomac.png" href="https://mecanicatecnomac.com.br/#topo" alt="">
+      <p><strong>O Melhor para o seu Caminhão</strong></p>
     </div>
+    
   </header>
 
   <nav class="menu">
@@ -64,32 +85,32 @@
       <h2>Serviços</h2>
       <div class="grid-servicos">
         <div class="card">
-          <img src="img/serviços/peças.jpg" alt="Troca de peças">
+          <img src="img/servicos/peças.jpg" alt="Troca de peças">
           <h3>Troca de peças</h3>
           <p>Substituição de componentes com peças de qualidade e mão de obra qualificada.</p>
         </div>
         <div class="card">
-          <img src="img/serviços/borracharia.jpg" alt="Borracharia">
+          <img src="img/servicos/borracharia.jpg" alt="Borracharia">
           <h3>Borracharia</h3>
-          <p>Reparos, trocas e concerto de pneus.</p>
+          <p>Reparos, trocas e conserto de pneus.</p>
         </div>
         <div class="card">
-          <img src="img/serviços/bombaInjetora.jpg" alt="Bombas injetoras">
+          <img src="img/servicos/bombaInjetora.jpg" alt="Bombas injetoras">
           <h3>Bombas injetoras</h3>
           <p>Manutenção e reparo de bombas injetoras para máximo desempenho.</p>
         </div>
         <div class="card">
-          <img src="img/serviços/guincho.jpg" alt="Guincho">
+          <img src="img/servicos/guincho.jpg" alt="Guincho">
           <h3>Guincho</h3>
           <p>Serviço de guincho rápido e seguro para emergências.</p>
         </div>
         <div class="card">
-          <img src="img/serviços/injecao.jpg" alt="Injeção eletrônica">
+          <img src="img/servicos/injecao.jpg" alt="Injeção eletrônica">
           <h3>Injeção eletrônica</h3>
           <p>Diagnóstico avançado e manutenção do sistema de injeção eletrônica.</p>
         </div>
         <div class="card">
-          <img src="img/serviços/mecanica.jpg" alt="Mecânica em geral">
+          <img src="img/servicos/mecanica.jpg" alt="Mecânica em geral">
           <h3>Mecânica em geral</h3>
           <p>Serviços completos para manutenção e conserto do seu veículo.</p>
         </div>
@@ -104,92 +125,92 @@
     <div class="grid-servicos">
       <!-- ... (restante dos cards de peças) -->
       <div class="card">
-        <img src="img/peças/Filtros.jpg" alt="Filtro de ar e óleo">
+        <img src="img/pecas/Filtros.jpg" alt="Filtro de ar e óleo">
         <h3>Filtro de ar e óleo</h3>
         <p>Filtros de alta performance para melhor desempenho do motor.</p>
       </div>
       <div class="card">
-        <img src="img/peças/Disco e Platô.png" alt="Disco e Platô">
+        <img src="img/pecas/Disco e Platô.png" alt="Disco e Platô">
         <h3>Disco e Platô</h3>
         <p>Conjunto de embreagem com durabilidade e eficiência.</p>
       </div>
       <div class="card">
-        <img src="img/peças/Rolamentos_1.png" alt="Rolamentos">
+        <img src="img/pecas/Rolamentos_1.png" alt="Rolamentos">
         <h3>Rolamentos</h3>
         <p>Precisão e resistência para diversas aplicações automotivas.</p>
       </div>
         <div class="card">
-        <img src="img/peças/aneis de vedação.png" alt="Anéis de vedação">
+        <img src="img/pecas/aneis de vedação.png" alt="Anéis de vedação">
         <h3>Anéis de vedação</h3>
         <p>Vedação eficiente para evitar vazamentos em sistemas automotivos.</p>
       </div>
       <div class="card hidden">
-        <img src="img/peças/Retentores.png" alt="Retentores">
+        <img src="img/pecas/Retentores.png" alt="Retentores">
         <h3>Retentores</h3>
         <p>Vedação confiável para evitar vazamentos e desgaste.</p>
       </div>
       <div class="card hidden">
-        <img src="img/peças/agd_3491-21-fa40de8ecfa9d7e9a515263254602027-1024-1024.png" alt="Coroa e Pinhão">
+        <img src="img/pecas/agd_3491-21-fa40de8ecfa9d7e9a515263254602027-1024-1024.png" alt="Coroa e Pinhão">
         <h3>Coroa e Pinhão</h3>
         <p>Transmissão precisa e resistente para o diferencial.</p>
       </div>
       <div class="card hidden">
-        <img src="img/peças/juntas-para-vedacao-5.png" alt="Juntas">
+        <img src="img/pecas/juntas-para-vedacao-5.png" alt="Juntas">
         <h3>Juntas</h3>
         <p>Vedação perfeita para motores e sistemas automotivos.</p>
       </div>
       <div class="card hidden">
-        <img src="img/peças/Pneus_1.png" alt="Pneus">
+        <img src="img/pecas/Pneus_1.png" alt="Pneus">
         <h3>Pneus</h3>
         <p>Diversos modelos com excelente aderência e durabilidade.</p>
       </div>
       <div class="card hidden">
-        <img src="img/peças/Emendas e Conexões.png" alt="Emendas e Conexões">
+        <img src="img/pecas/Emendas e Conexões.png" alt="Emendas e Conexões">
         <h3>Emendas e Conexões</h3>
         <p>Componentes essenciais para sistemas de combustível e ar.</p>
       </div>
       <div class="card hidden">
-        <img src="img/peças/Baterias.png" alt="Baterias">
+        <img src="img/pecas/Baterias.png" alt="Baterias">
         <h3>Baterias</h3>
         <p>Baterias de alta qualidade com instalação rápida.</p>
       </div>
       <div class="card hidden">
-        <img src="img/peças/Abraçadeiras.png" alt="Abraçadeiras">
+        <img src="img/pecas/Abraçadeiras.png" alt="Abraçadeiras">
         <h3>Abraçadeiras</h3>
         <p>Fixação segura para mangueiras e conexões.</p>
       </div>
       <div class="card hidden">
-        <img src="img/peças/Correias.png" alt="Correias">
+        <img src="img/pecas/Correias.png" alt="Correias">
         <h3>Correias</h3>
         <p>Correias resistentes para sistemas de transmissão e motor.</p>
       </div>
       <div class="card hidden">
-        <img src="img/peças/Molas.png" alt="Molas">
+        <img src="img/pecas/Molas.png" alt="Molas">
         <h3>Molas</h3>
         <p>Suspensão equilibrada com molas de qualidade superior.</p>
       </div>
       <div class="card hidden">
-        <img src="img/peças/Colas selante.png" alt="Colas selante trava de parafusos">
+        <img src="img/pecas/Colas selante.png" alt="Colas selante trava de parafusos">
         <h3>Colas selante/trava de parafusos</h3>
         <p>Fixação confiável e vedação duradoura.</p>
       </div>
       <div class="card hidden">
-        <img src="img/peças/Grampos.jpg" alt="Grampos">
+        <img src="img/pecas/Grampos.jpg" alt="Grampos">
         <h3>Grampos</h3>
         <p>Grampos aplicados em molejos de veículos pesados.</p>
       </div>
       <div class="card hidden">
-        <img src="img/peças/Bucha de Barra.png" alt="Bucha de Barra">
+        <img src="img/pecas/Bucha de Barra.png" alt="Bucha de Barra">
         <h3>Bucha de Barra</h3>
         <p>Estabilidade e controle na suspensão do veículo.</p>
       </div>
       <div class="card hidden">
-        <img src="img/peças/Óleos-lubrificantes_1.png" alt="Óleos lubrificantes">
+        <img src="img/pecas/Óleos-lubrificantes_1.png" alt="Óleos lubrificantes">
         <h3>Óleos lubrificantes</h3>
         <p>Lubrificação ideal para proteção do motor e engrenagens.</p>
       </div>
       <div class="card hidden">
-        <img src="img/peças/Valvula.jpg" alt="Válvulas">
+        <img src="img/pecas/Valvula.jpg" alt="Válvulas">
         <h3>Válvulas</h3>
         <p>Controle preciso de fluxo nos motores.</p>
       </div>
@@ -208,7 +229,7 @@
     </div>
     <div class="container" id="Tijucas">
       <h3>Loja em Tijucas</h3>
-      <p>Avenida Coleira, N°794 - Bairro Praça - Tijucas/SC</p>
+      <p>Avenida Coleira, n°794 - Bairro Praça - Tijucas/SC</p>
       <p>
       <i class="fab fa-whatsapp"></i>
       (48) 3264-0808
@@ -276,5 +297,30 @@
       btnVerMais.style.display = 'inline-block';
     });
   </script>
+<script>
+  const menu = document.querySelector('.menu');
+  const headerFixo = document.getElementById('header-fixo');
+
+  window.addEventListener('scroll', () => {
+    const scrollY = window.scrollY;
+    const limite = menu.offsetTop + menu.offsetHeight;
+
+    if (scrollY >= limite) {
+      headerFixo.classList.add('visible');
+    } else {
+      headerFixo.classList.remove('visible');
+    }
+  });
+
+  const btnHamburguer = document.querySelector('.btn-hamburguer');
+const menuFixo = document.querySelector('.menu-fixo');
+
+btnHamburguer.addEventListener('click', () => {
+  menuFixo.classList.toggle('menu-aberto');
+  btnHamburguer.classList.toggle('menu-aberto');
+});
+
+</script>
+
 </body>
 </html>
